add delete all routes
