# docs/api.yml
@@ -123,6 +123,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GithubAuthIssue'
+    delete:
+      tags:
+        - todo
+      summary: Delete all todo data
+      description: Clear all todo data
+      operationId: deleteAllTodos
+      parameters:
+        - name: username
+          in: path
+          description: your github username
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '400':
+          description: No data to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: The username provided is not part of the boolean-uk github organisation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GithubAuthIssue'
   /{username}/todo/{todoId}:
     get:
       tags:
@@ -340,6 +372,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GithubAuthIssue'
+    delete:
+      tags:
+        - pokemon
+      summary: Delete all pokemon data
+      description: Clear all pokemon data
+      operationId: deleteAllPokemon
+      parameters:
+        - name: username
+          in: path
+          description: your github username
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '400':
+          description: No data to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: The username provided is not part of the boolean-uk github organisation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GithubAuthIssue'
   /{username}/pokemon/{pokemonId}:
     put:
       tags:
@@ -507,6 +571,38 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Contact'
+        '401':
+          description: The username provided is not part of the boolean-uk github organisation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GithubAuthIssue'
+    delete:
+      tags:
+        - contact
+      summary: Delete all contact data
+      description: Clear all contact data
+      operationId: deleteAllContacts
+      parameters:
+        - name: username
+          in: path
+          description: your github username
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '400':
+          description: No data to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '401':
           description: The username provided is not part of the boolean-uk github organisation
           content:
@@ -730,6 +826,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GithubAuthIssue'
+    delete:
+      tags:
+        - post
+      summary: Delete all post data
+      description: Clear all post data
+      operationId: deleteAllPosts
+      parameters:
+        - name: username
+          in: path
+          description: your github username
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '400':
+          description: No data to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: The username provided is not part of the boolean-uk github organisation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GithubAuthIssue'
   /{username}/post/{postId}:
     get:
       tags:
@@ -947,6 +1075,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GithubAuthIssue'
+    delete:
+      tags:
+        - post
+      summary: Delete all comment data
+      description: Clear all comment data
+      operationId: deleteAllComments
+      parameters:
+        - name: username
+          in: path
+          description: your github username
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+        '400':
+          description: No data to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: The username provided is not part of the boolean-uk github organisation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GithubAuthIssue'
   /{username}/post/{postId}/comment/{commentId}:
     put:
       tags:
@@ -1063,6 +1223,12 @@ components:
         error:
           type: string
           example: invalid item type
+    Message:
+      type: object
+      properties:
+        message:
+          type: string
+          example: successful operation
     Grocery:
       type: object
       properties:
