# src/service/controller.ts
@@ -61,4 +61,16 @@ export class Controller<T extends Identity, CreateDto, UpdateDto> {
           
     return res.status(200).json(data);
   }
+
+  ClearData(req: Context, res: Response) {
+    const username = req.context?.username || null;
+
+    if (!username) {
+      return res.status(400).json({ error: 'no data to clear' });
+    }
+
+    this.repository.clearUserRepository(username);
+
+    return res.status(200).json({ message: 'data cleared' });
+  }
 }
